--- a/WFGL/WFGL.csproj
+++ b/WFGL/WFGL.csproj
@@ -11,6 +11,7 @@
     <Copyright>MIT </Copyright>
     <PackageTags>game; windows; forms </PackageTags>
     <NeutralLanguage>en</NeutralLanguage>
+    <RepositoryUrl>https://github.com/BiznesBear/WFGL</RepositoryUrl>
   </PropertyGroup>
-
+	
 </Project>
