--- a/DemoGame/DemoGame.csproj
+++ b/DemoGame/DemoGame.csproj
@@ -16,4 +16,8 @@
     <Folder Include="assets\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Box2D" Version="2.3.0" />
+  </ItemGroup>
+
 </Project>
