--- a/DemoGame/DemoGame.csproj
+++ b/DemoGame/DemoGame.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>net8.0-windows</TargetFramework>
+    <TargetFramework>net9.0-windows7.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <StartupObject>DemoGame.Program</StartupObject>
@@ -17,13 +17,16 @@
   </ItemGroup>
 
   <ItemGroup>
-    <None Update="aushf.jpg">
+    <None Update="assets\aushf.jpg">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
-    <None Update="furniture.png">
+    <None Update="assets\furniture.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
-    <None Update="mozg-masz-wypadlo-ci.jpg">
+    <None Update="assets\mozg-masz-wypadlo-ci.jpg">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="assets\WFGL.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
   </ItemGroup>
